@startuml CD_02_DettaglioServer
' Descrizione del diagramma:
' Questo Diagramma delle Classi fornisce un dettaglio approfondito del modulo Server.
' Mostra i pattern architetturali utilizzati e le relazioni tra interfaccia utente, logica e dati.
'
' Componenti principali:
' - ApplicazioneServer: Punto di ingresso dell'app JavaFX.
' - ControllerServer: Gestisce la UI del server (start, stop, classifiche, log).
' - ReteServer: Accetta le connessioni in ingresso sui Socket.
' - GestoreClient: Thread dedicato alla gestione di una singola connessione client.
' - CoordinatoreGioco: Gestisce la logica del gioco in modo thread-safe (accoppiamento giocatori, fine sfida).
' - ServizioAnalisi & AnalizzatoreDocumenti: Task asincrono per l'elaborazione dei testi in base al calcolo TF.
' - GestoreDatabase: Singleton per l'accesso a SQLite (salvataggio storico, statistiche, utenti).
skinparam classAttributeIconSize 0

title CD_02 — Dettaglio Modulo Server (package reali da Doxygen)

class ApplicazioneServer <<JavaFX Application>> {
  +start(primaryStage : Stage)
  +{static} main(args : String[])
}

package "util" {
  class CaricatoreConfigurazione {
    -props : Properties
    -{static} LOGGER : Logger
    +CaricatoreConfigurazione(relativePath : String)
    +get(key, defaultValue : String) : String
    +getInt(key : String, defaultValue : int) : int
  }
}

package "model" {
  class ReteServer {
    -porta : int
    -coordinator : CoordinatoreGioco
    -serverSocket : ServerSocket
    -running : boolean = false
    -{static} LOGGER : Logger
    +ReteServer(porta : int, coordinator : CoordinatoreGioco)
    +start() <<throws IOException>>
    +stop()
    +isRunning() : boolean
  }

  class GestoreClient {
    -socket : Socket
    -coordinator : CoordinatoreGioco
    -out : ObjectOutputStream
    -in : ObjectInputStream
    -nomeUtente : String
    -ruolo : String
    -autenticato : boolean = false
    -{static} LOGGER : Logger
    +GestoreClient(socket : Socket, coordinator : CoordinatoreGioco)
    +startListening()
    -cicloAscolto()
    -smistaMessaggio(msg : Messaggio)
    +invia(msg : Messaggio) : synchronized
    +close()
    +isAutenticato() : boolean
    +setAutenticato(autenticato : boolean)
    +getNomeUtente() : String
    +setNomeUtente(nomeUtente : String)
    +getRuolo() : String
    +setRuolo(ruolo : String)
    +getRemoteAddress() : String
  }

  class CoordinatoreGioco {
    -db : GestoreDatabase
    -analizzatore : AnalizzatoreDocumenti
    -giocatoriInAttesa : List<GestoreClient> = ArrayList<>()
    -giocatore1 : GestoreClient
    -giocatore2 : GestoreClient
    -scheduler : ScheduledExecutorService
    -taskTimeout : ScheduledFuture<?>
    -sfidaAttiva : boolean = false
    -parolaOriginaleCorrente : String
    -parolaCifrataCorrente : String
    -estrattoCorrente : String
    -spostamentoCorrente : int
    -tempoInizioSfida : long
    -timeoutSeconds : int = 60
    -excerptWords : int = 60
    -statusCallback : Consumer<String>
    -{static} LOGGER : Logger
    +CoordinatoreGioco(db : GestoreDatabase, analizzatore : AnalizzatoreDocumenti)
    +setGameConfig(timeoutSeconds : int, excerptWords : int)
    +setStatusCallback(callback : Consumer<String>)
    +setAnalyzer(analizzatore : AnalizzatoreDocumenti) : synchronized
    +getDb() : GestoreDatabase
    +gestisciLogin(client : GestoreClient, carico : PayloadAutenticazione) : synchronized
    +gestisciRegistrazione(client : GestoreClient, carico : PayloadAutenticazione) : synchronized
    +gestisciNuovaRichiesta(client : GestoreClient) : synchronized
    +gestisciRisposta(client : GestoreClient, guess : String) : synchronized
    +gestisciRichiestaStorico(client : GestoreClient) : synchronized
    +onClientDisconnesso(client : GestoreClient) : synchronized
    -aggiungiInListaAttesa(client : GestoreClient)
    -avviaSfida(p1 : GestoreClient, p2 : GestoreClient)
    -terminaSfida(winner : GestoreClient, tempoRispostaMs : long, isDraw : boolean)
    -log(msg : String)
  }
}

package "service" {
  class AnalizzatoreDocumenti <<Serializable>> {
    -termFrequency : Map<String, Double> = HashMap<>()
    -aggregatedText : String = ""
    -{static} serialVersionUID : long = 1L
    -{static} LOGGER : Logger
    +analyze(files : List<File>) <<throws IOException>>
    +getTermFrequency() : Map<String,Double>
    +getAggregatedText() : String
    +hasResults() : boolean
    +extractRandomExcerpt(numWords : int) : String
    +selectWordFromExcerpt(excerpt : String, difficulty : int) : String
    +saveToFile(outputPath : String) <<throws IOException>>
    +{static} loadFromFile(inputPath : String) : AnalizzatoreDocumenti\n<<throws IOException, ClassNotFoundException>>
  }

  class ServizioAnalisi {
    -files : List<File>
    +setFiles(files : List<File>)
    #createTask() : Task<AnalizzatoreDocumenti>
    .. extends javafx.concurrent.Service<AnalizzatoreDocumenti> ..
  }
}

package "db" {
  class GestoreDatabase <<Singleton>> {
    -{static} instance : GestoreDatabase
    -dbPath : String
    -connessione : Connection
    -{static} LOGGER : Logger
    -GestoreDatabase(dbPath : String)
    +{static} getInstance(dbPath : String) : GestoreDatabase <<synchronized>>
    +connetti() <<throws SQLException>>
    +disconnetti()
    -initSchema() <<throws SQLException>>
    -seedAccounts() <<throws SQLException>>
    -insertUserIfAbsent(nomeUtente, password, ruolo : String) <<throws SQLException>>
    +{static} hashPassword(password : String) : String
    +autentica(nomeUtente : String, password : String) : String
    +registraUtente(nomeUtente : String, password : String) : boolean
    +getUserId(nomeUtente : String) : int
    -insertChallenge(estrattoTesto, encryptedWord, originalWord : String,\n  spostamento : int) : int <<throws SQLException>>
    -insertResult(idSfida : int, userId : int, esito : String,\n  tempoRispostaMs : long) <<throws SQLException>>
    +saveChallengeWithResults(estrattoTesto, encryptedWord, originalWord : String,\n  spostamento : int, winnerUser, loserUser : String,\n  draw : boolean, t1, t2 : long)
    +getHistory(nomeUtente : String) : List<VoceStorico>
    +getAllStats() : List<UserStats>
  }

  class UserStats {
    +nomeUtente : final String
    +wins : final int
    +gamesPlayed : final int
    +avgResponseMs : final long
    +UserStats(nomeUtente : String, wins : int,\n  gamesPlayed : int, avgResponseMs : long)
  }

  GestoreDatabase +-- UserStats
}

package "controller" {
  class ControllerServer <<Initializable>> {
    -coordinator : CoordinatoreGioco
    -db : GestoreDatabase
    -network : ReteServer
    -analysisService : ServizioAnalisi
    -currentAnalyzer : AnalizzatoreDocumenti
    -selectedFiles : List<File> = ArrayList<>()
    -serverPort : int = 5000
    -statusLabel, portLabel, progressLabel, dettaglio... : Label
    -startServerBtn, stopServerBtn, selectFilesBtn,\nanalyzeBtn, saveAnalysisBtn, loadAnalysisBtn,\nrefreshStatsBtn : Button
    -documentListView : ListView<String>
    -progressBar : ProgressBar
    -logArea : TextArea
    -tfTableView : TableView<TFEntry>
    -wordColumn : TableColumn<TFEntry,String>
    -freqColumn : TableColumn<TFEntry,Double>
    -statsTableView : TableView<StatEntry>
    -statUserCol : TableColumn<StatEntry,String>
    -statWinsCol : TableColumn<StatEntry,Integer>
    -statGamesCol : TableColumn<StatEntry,Integer>
    -statAvgCol : TableColumn<StatEntry,Long>
    -{static} LOGGER : Logger
    -{static} TIME_FMT : DateTimeFormatter
    +initialize(location : URL, resources : ResourceBundle)
    -handleStartServer()
    -handleStopServer()
    -handleSelectFiles()
    -handleClearFiles()
    -handleAnalyze()
    -handleSaveAnalysis()
    -handleLoadAnalysis()
    -handleRefreshStats()
    -handleClearLog()
    -setupTfTable()
    -setupStatsTable()
    -populateTfTable(tf : Map<String,Double>)
    -showAlert(tipo : Alert.AlertType, title, content : String)
    -log(msg : String)
  }

  class TFEntry {
    word : String
    frequency : Double
  }

  class StatEntry {
    nomeUtente : String
    wins, gamesPlayed : int
    avgResponseMs : long
  }

  ControllerServer +-- TFEntry
  ControllerServer +-- StatEntry
}

ApplicazioneServer --> ControllerServer : carica server.fxml
ApplicazioneServer --> CaricatoreConfigurazione

ReteServer "1" *-- "0..*" GestoreClient : crea/gestisce
GestoreClient --> CoordinatoreGioco : smista messaggi
CoordinatoreGioco --> GestoreDatabase
CoordinatoreGioco --> AnalizzatoreDocumenti
CoordinatoreGioco ..> "indovinaparola.common.CifrarioCesare" : usa

ControllerServer --> ReteServer : network
ControllerServer --> CoordinatoreGioco : coordinator
ControllerServer --> GestoreDatabase : db
ControllerServer --> ServizioAnalisi : analysisService
ControllerServer --> AnalizzatoreDocumenti : currentAnalyzer
ControllerServer ..> UserStats : getAllStats()
ServizioAnalisi ..> AnalizzatoreDocumenti : createTask() produce

note right of GestoreClient
  invia() è synchronized e chiama
  out.reset() dopo ogni writeObject
  (IF-S09). OOS inizializzato
  prima di OIS con flush()
  (IF-S08).
end note

note right of CoordinatoreGioco
  Tutti i metodi pubblici sono
  synchronized (IF-S22): l'istanza
  è condivisa tra i thread
  GestoreClient.
end note

note right of GestoreDatabase
  Singleton (getInstance lazy,
  synchronized). PreparedStatement
  per tutte le query.
  saveChallengeWithResults() in
  transazione atomica
  (setAutoCommit(false) ->
  commit()/rollback()).
end note

note bottom of ServizioAnalisi
  ServizioAnalisi estende
  javafx.concurrent.Service<AnalizzatoreDocumenti>:
  riusabile con reset()+start();
  createTask() esegue analisi
  in background senza bloccare
  il FX Application Thread.
end note
@enduml
